feat: change description metadata

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Tutoriales belleza | EcoBeauty" />
     <meta
       property="og:description"
-      content="Una forma fácil de administrar los pedidos!"
+      content="Una forma fácil de aprender a crear tus cosmeticos!"
     />
     <!-- IMG URL: -->
     <meta
